<package>
  <name>rbrobout_common</name>
  <version>1.1.3</version>
  <description>URDF description of the RB-Robout, platform messages and other files for simulation.</description>


  <license>BSD</license>


  <author email="avillena@robotnik.es">Álvaro Villena</author>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rbrobout_description</run_depend>
  <run_depend>rbrobout_localization</run_depend>
  <run_depend>rbrobout_navigation</run_depend>
  <run_depend>rbrobout_pad</run_depend>
  <run_depend>rbrobout_control</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
