<?xml version="1.0"?>
<package>
  <name>rbrobout_control</name>
  <version>1.1.3</version>
  <description>
		This package contains the launch files that load the required controller interfaces for simulation in Gazebo.
  </description>

  <author email="avillena@robotnik.es">Álvaro Villena</author>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>joint_state_controller</build_depend>
  <build_depend>velocity_controllers</build_depend>
  <build_depend>twist_mux</build_depend>
  
  <run_depend>joint_state_controller</run_depend>
  <run_depend>velocity_controllers</run_depend>
  <run_depend>twist_mux</run_depend>

</package>
